# causal-optimizer

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  claude-review.sh  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  complete_graph.py  interaction.py  toy_graph.py
causal_optimizer/: __init__.py  __main__.py  cli.py  types.py
causal_optimizer/benchmarks/: __init__.py  complete_graph.py  counterfactual_energy.py  counterfactual_variants.py  criteo.py  dose_response.py  high_dimensional.py  hillstrom.py  interaction.py  interaction_policy.py  interaction_scm.py  null_predictive_energy.py  open_bandit.py  open_bandit_benchmark.py  predictive_energy.py  provenance.py  runner.py  toy_graph.py
causal_optimizer/designer/: __init__.py  factorial.py  screening.py
causal_optimizer/diagnostics/: __init__.py  advisor.py  anytime.py  convergence.py  coverage.py  models.py  observational.py  robustness.py  skip_calibration.py  time_calendar_profiler.py  variable_signal.py
causal_optimizer/discovery/: __init__.py  graph_learner.py
causal_optimizer/domain_adapters/: __init__.py  bandit_log.py  base.py  energy_load.py  marketing.py  marketing_logs.py  ml_training.py
causal_optimizer/engine/: __init__.py  loop.py
causal_optimizer/estimator/: __init__.py  effects.py  observational.py
causal_optimizer/evolution/: __init__.py  map_elites.py
causal_optimizer/optimizer/: __init__.py  bayesian.py  causal_gp.py  pomis.py  suggest.py
causal_optimizer/predictor/: __init__.py  encoding.py  epsilon.py  off_policy.py
causal_optimizer/storage/: __init__.py  sqlite.py
causal_optimizer/validator/: __init__.py  sensitivity.py
docs/: architecture.md
examples/: auto_discovery.py  cli_workflow.sh  constrained.py  demo_adapter.py  energy_load.py  marketing_logs.py  marketing_optimization.py  ml_hyperparameter_tuning.py  multi_objective.py  quickstart.py
scripts/: _open_bandit_report_helper.py  ab_reranking_harness.py  b80_seed_diagnostics.py  counterfactual_benchmark.py  criteo_benchmark.py  dose_response_benchmark.py  energy_benchmark_suite.py  energy_predictive_benchmark.py  hillstrom_benchmark.py  interaction_ablation.py  null_energy_benchmark.py  open_bandit_benchmark.py  profile_time_series_calendar.py
tests/fixtures/: LICENSE-CRITEO  criteo_uplift_fixture.csv  energy_load_fixture.csv  hillstrom_fixture.csv  marketing_log_fixture.csv  toy_adapter.py
tests/integration/: conftest.py  test_ax_pipeline.py  test_bandit_log_adapter_smoke.py  test_benchmarks.py  test_causal_beats_naive.py  test_causal_gp_vs_ax.py  test_energy_load_adapter.py  test_full_pipeline.py  test_hillstrom_benchmark.py  test_marketing_adapter.py  test_marketing_scenario.py  (+8 more)
thoughts/: 00-origin.md  01-landscape.md  02-causal-bayesian-optimization.md  03-experimental-design.md  04-applications.md  05-causal-bandits.md  06-evolutionary-strategies.md  07-roadmap.md
(+162 files in other folders)
